--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -100,6 +100,20 @@ body {
     padding: 0px 10px;
     border: 0px;
     font-size: 1em;
+    transition: 0.2s;
+}
+
+.tab-buttons button:hover{
+    transform: scale(1.2);
+}
+
+.tab-btn.active{
+    transition: 0.3s;
+}
+
+.tab-btn.active{
+    transform: scale(1.3);
+    color: var(--cor-azul);
 }
 
 @media (max-width: 768px){
@@ -124,7 +138,6 @@ body {
     }
 
     .tab-buttons {
-        display: flex;
         width: 100%;
         flex-direction: column;
         align-items: center;
@@ -164,11 +177,20 @@ body {
     }
 
     .tab-buttons {
-        display: flex;
         width: 65%;
         height: 50px;
         justify-content: space-between;
     }
+}
+.content {
+    display: none; /* Oculta todos os conteúdos por padrão */
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out; /* Adiciona uma transição suave */
+}
+
+.content.show {
+    display: block; /* Mostra o conteúdo ativo */
+    opacity: 1;
 }
 
 
