--- a/src/style/skills.css
+++ b/src/style/skills.css
@@ -3,7 +3,7 @@
 :root {
     --fonte-principal: "Montserrat", serif;
     --fonte-secundaria: Arial, Helvetica, sans-serif;
-    --cor-azul: #00EEFF;
+    --cor-azul: .00EEFF;
 }
 
 * {
@@ -13,11 +13,12 @@
     font-family: var(--fonte-principal);
 }
 
-#habilidades{
+.habilidades{
     margin: 40px auto 0px auto;
+    justify-content: center;
 }
 
-#habilidades .grid-container {
+.habilidades .grid-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,18 +50,18 @@
     margin: 0px 3px 0px -8px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 64px 40px;
+    gap: 43px 40px;
     padding-bottom: 40px;
     justify-content: center;
     align-items: center;
     align-content: center;
-    margin: 20px auto 0px auto;
-        
+    margin: 20px auto 0px auto;    
 }
 
 .grid-skills div {
     width: 65px;
     height: 50px;
+    transition: 0.3s;
 }
 
 .grid-skills div img {
@@ -73,6 +74,10 @@
 
 .desbloqueado {
     border-radius: 25%;
+}
+
+.desbloqueado:hover{
+    transform: scale(1.3);
 }
 
 .bloqueado {
