--- a/src/style/portifolio.css
+++ b/src/style/portifolio.css
@@ -14,7 +14,7 @@
 }
 
 .portifolio{
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 
@@ -89,7 +89,11 @@
     }
 
     .container-portifolio p {
-        font-size: 1rem;
+        width: 95%;
+        color: white;
+        padding: 10px;
+        margin: 0px auto;
+        text-align: center;
     }
 }
 
