--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -165,6 +165,11 @@ body {
         border: 0px;
         font-size: 1em;
         height: 50px;
+        transition: 0s;
+    }
+
+    .tab-btn.active{
+        transition: 0s;
     }
 
     .hidden {
