--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -121,6 +121,15 @@ body {
 }
 
 @media (max-width: 768px){
+    body {
+        background: url('../assets/fundo2.png') center center / cover no-repeat;
+        background-color: rgba(0, 0, 255, 0.37);
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        background-attachment: scroll;
+    }
+
     .container-navigation {
         width: 100%;
         display: flex;
