--- a/src/style/home.css
+++ b/src/style/home.css
@@ -13,6 +13,24 @@
     font-family: var(--fonte-principal);
 }
 
+html, body {
+    height: 100%;
+    overflow: auto; /* Permite a rolagem do conteúdo */
+    overflow-x: hidden;
+}
+
+body {
+    background: url('../assets/fundo2.png') center center / cover no-repeat;
+    background-color: rgba(0, 0, 255, 0.37);
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+    background-attachment: fixed;
+}
+
 .home{
     display: flex;
     width: 80%;
@@ -135,9 +153,22 @@
 }
 
 @media (max-width: 480px) {
+    .home .main {
+        display: flex;
+        width: 100%;
+        margin: auto;
+        text-align: center;
+        flex-direction: column;
+        align-items: center;
+    }
 
     .home .main p {
-        width: 100%;
+    width: 90%;
+    font-size: 1rem;
+    }
+
+    .home .main p {
+        width: 90%;
         font-size: 1rem;
     }
 
