--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -13,24 +13,6 @@
     font-family: var(--fonte-principal);
 }
 
-html, body {
-    height: 100%;
-    overflow: auto; /* Permite a rolagem do conteúdo */
-    overflow-x: hidden;
-}
-
-body {
-    background: url('../assets/fundo2.png') center center / cover no-repeat;
-    background-color: rgba(0, 0, 255, 0.37);
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    background-attachment: fixed;
-}
-
 .contents{
     width: 90%;
     margin: auto;
@@ -175,6 +157,7 @@ body {
         font-size: 1em;
         height: 50px;
         transition: 0s;
+        padding: 15px;
     }
 
     .tab-btn.active{
@@ -192,16 +175,16 @@ body {
 }
 
 @media (min-width: 768px) and (max-width: 1023px){
-    .container-navigation{
+    .container-navigation {
+        width: 98%;
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: auto
+        margin: auto;
+        justify-content: space-between;
+        flex-direction: row;
     }
 
     .tab-buttons {
         width: 65%;
-        height: 50px;
         justify-content: space-between;
     }
 
