--- a/src/style/home.css
+++ b/src/style/home.css
@@ -127,6 +127,15 @@ body {
 }
 
 @media (max-width: 768px) {
+    body {
+        background: url('../assets/fundo2.png') center center / cover no-repeat;
+        background-color: rgba(0, 0, 255, 0.37);
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        background-attachment: scroll;
+    }
+    
     .home{
         width: 90%;
         flex-direction: column;
@@ -153,6 +162,15 @@ body {
 }
 
 @media (max-width: 480px) {
+    body {
+        background: url('../assets/fundo2.png') center center / cover no-repeat;
+        background-color: rgba(0, 0, 255, 0.37);
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        background-attachment: scroll;
+    }
+
     .home .main {
         display: flex;
         width: 100%;
