--- a/src/style/skills.css
+++ b/src/style/skills.css
@@ -90,9 +90,8 @@
     .grid-skills {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        gap: 64px 20px;
-        justify-items: center;
-        margin: 20px auto 0px auto;
+        gap: 64px 0px;
+        margin: 20px 10px 0px 0px;
     }
 
     .grid-container h1 {
@@ -110,8 +109,7 @@
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         gap: 64px 0px;
-        justify-items: center;
-        margin: 20px auto 0px auto;
+        margin: 20px 10px 0px 0px;
     }
 
     .grid-skills div {
