--- a/src/style/home.css
+++ b/src/style/home.css
@@ -127,6 +127,10 @@ body {
 }
 
 @media (max-width: 768px) {
+    html, body {
+        overflow: hidden;
+    }
+    
     body {
         background: url('../assets/fundo2.png') center center / cover no-repeat;
         background-color: rgba(0, 0, 255, 0.37);
@@ -164,6 +168,10 @@ body {
 }
 
 @media (max-width: 480px) {
+    html, body {
+        overflow: hidden;
+    }
+
     body {
         background: url('../assets/fundo2.png') center center / cover no-repeat;
         background-color: rgba(0, 0, 255, 0.37);
@@ -214,7 +222,7 @@ body {
     }
 
     .home .main button {
-        width: 45%;
+        width: 50%;
         padding: 10px;
     }
 
