--- a/src/style/home.css
+++ b/src/style/home.css
@@ -249,9 +249,14 @@ body {
         width: 80%;
         display: flex;
         margin: auto;
-        margin: -30px auto 50px auto;
+        margin: 10px auto 50px auto;
         flex-direction: column;
         align-items: center;
+    }
+
+    .img-avatar img {
+        width: 80%;
+        max-width: 530px;
     }
 }
 
