--- a/src/style/home.css
+++ b/src/style/home.css
@@ -16,7 +16,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100dvh;
     overflow: auto;
 }
 
@@ -25,7 +25,7 @@ body {
     background-attachment: fixed;
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
 }
 
 .home{
@@ -127,7 +127,7 @@ body {
     html, body {
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: 100dvh;
         overflow: auto;
     }
     
@@ -136,7 +136,7 @@ body {
         background-attachment: fixed;
         position: relative;
         width: 100%;
-        min-height: 100vh;
+        min-height: 100dvh;
     }
 
     .home {
@@ -170,7 +170,7 @@ body {
     html, body {
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: 100dvh;
         overflow: auto;
     }
     
@@ -179,7 +179,7 @@ body {
         background-attachment: fixed;
         position: relative;
         width: 100%;
-        min-height: 100vh;
+        min-height: 100dvh;
     }
     
  
