--- a/src/style/home.css
+++ b/src/style/home.css
@@ -16,7 +16,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100dvh;
+    height: 100vh;
     overflow: auto;
 }
 
@@ -127,7 +127,7 @@ body {
     html, body {
         margin: 0;
         padding: 0;
-        height: 100dvh;
+        height: 100vh;
         overflow: auto;
     }
     
@@ -170,7 +170,7 @@ body {
     html, body {
         margin: 0;
         padding: 0;
-        height: 100dvh;
+        height: 100vh;
         overflow: auto;
     }
     
