--- a/src/style/about-me.css
+++ b/src/style/about-me.css
@@ -95,7 +95,32 @@
     color: black;
 }
 
-/* Estilos para tablets */
+@media (max-width: 1023px){
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 100px auto auto auto;
+        align-items: center;
+        flex-wrap: nowrap;
+        justify-content: space-evenly;
+    }
+
+    .about-me .container-conteudo{
+        width: 70%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .about-me .container-foto{
+        width: 100%;
+    }
+
+    .container-foto .foto{
+        margin: -33px auto 50px auto;
+    }
+}
+
 @media (max-width: 768px) {
     .about-me {
         flex-direction: column;
@@ -141,7 +166,6 @@
     }
 }
 
-/* Estilos para dispositivos móveis */
 @media (max-width: 480px) {
     .about-me {
         margin: 80px auto auto auto;
@@ -183,31 +207,5 @@
 
     .container-conteudo button a {
         padding: 10px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1023px){
-    .about-me {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        margin: 100px auto auto auto;
-        align-items: center;
-        flex-wrap: nowrap;
-        justify-content: space-evenly;
-    }
-
-    .about-me .container-conteudo{
-        width: 70%;
-        text-align: center;
-        justify-content: center;
-    }
-
-    .about-me .container-foto{
-        width: 100%;
-    }
-
-    .container-foto .foto{
-        margin: -33px auto 50px auto;
     }
 }
