--- a/src/style/home.css
+++ b/src/style/home.css
@@ -50,7 +50,7 @@ body {
     margin-bottom: 2px;
 }
 
-.home .main h2 strong {
+.home .main h2  {
     color: var(--cor-azul);
     font-size: 1.8rem;
 }
@@ -78,8 +78,10 @@ body {
 
 .img-avatar .sombra {
     background-color: transparent;
-    width: 175px;
-    box-shadow: -11px 13px 44px 6px var(--cor-azul);
+    width: 40%;
+    box-shadow: -6px -33px 53px 6px var(--cor-azul);
+    margin: auto;
+    z-index: -1;
 }
 
 .home .main .links-redes{
@@ -123,6 +125,35 @@ body {
     text-decoration: none;
 }
 
+@media (max-width: 1118px){
+    .home {
+        display: flex;
+        width: 90%;
+        margin: 17px auto 60px auto;
+        flex-direction: column-reverse;
+    }
+
+    .home .main {
+        width: 100%;
+        margin: auto;
+        text-align: center;
+    }
+
+    .home section {
+        width: 80%;
+        display: flex;
+        margin: auto;
+        margin: 10px auto 50px auto;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .img-avatar img {
+        width: 80%;
+        max-width: 530px;
+    }
+}
+
 @media (max-width: 768px) {
     html, body {
         margin: 0;
@@ -160,9 +191,23 @@ body {
         width: 100%;
     }
 
-    .home .main h2 strong {
+    .home .main h2  {
         color: var(--cor-azul);
         font-size: 5vw;
+    }
+    .img-avatar .sombra {
+        background-color: transparent;
+        width: 40%;
+        box-shadow: 0px -10px 35px 6px var(--cor-azul);
+        margin: auto;
+        z-index: -1;
+    }
+}
+
+@media (max-width: 560px){
+    .home .main h2  {
+        color: var(--cor-azul);
+        font-size: 1.3rem;
     }
 }
 
@@ -215,7 +260,11 @@ body {
     }
 
     .img-avatar .sombra {
-        width: 150px;
+        background-color: transparent;
+        width: 40%;
+        box-shadow: 0px -10px 35px 4px var(--cor-azul);
+        margin: auto;
+        z-index: -1;
     }
 
     .home .main .links-redes {
@@ -233,46 +282,14 @@ body {
     }
 }
 
-@media (max-width: 1118px){
-    .home {
-        display: flex;
-        width: 90%;
-        margin: 17px auto 60px auto;
-        flex-direction: column-reverse;
-    }
-
-    .home .main {
-        width: 100%;
-        margin: auto;
-        text-align: center;
-    }
-
-    .home section {
-        width: 80%;
-        display: flex;
-        margin: auto;
-        margin: 10px auto 50px auto;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .img-avatar img {
-        width: 80%;
-        max-width: 530px;
-    }
-}
-
-@media (max-width: 560px){
-    .home .main h2 strong {
-        color: var(--cor-azul);
-        font-size: 1.3rem;
-    }
-}
-
 @media (max-width: 360px){
     .home .main button {
         width: 70%;
         padding: 10px;
+    }
+
+    .home .main h2 {
+        white-space: nowrap;
     }
 }
 
