--- a/src/style/portifolio.css
+++ b/src/style/portifolio.css
@@ -77,7 +77,24 @@
     transform: scale(1.1);
 }
 
-/* Estilos para tablets */
+@media (max-width: 1023px){
+    .container-projetos div {
+        display: flex;
+        width: 70%;
+        max-width: 300px;
+        height: 200px;
+        margin: 0px auto;   
+        transition: all 0.3s ease 0s;
+    }
+
+    .container-portifolio .container-projetos {
+        width: 95%;
+        margin: 20px auto 0;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 0px;
+    }
+}
+
 @media (max-width: 768px) {
     .container-portifolio .container-projetos {
         grid-template-columns: repeat(2, 1fr);
@@ -97,7 +114,6 @@
     }
 }
 
-/* Estilos para dispositivos móveis */
 @media (max-width: 480px) {
     .portifolio {
         width: 100%;
@@ -138,23 +154,4 @@
     .container-projetos .projeto-bloqueado a img {
         display: none;
     }
-}
-
-@media (min-width: 768px) and (max-width: 1023px){
-    .container-projetos div {
-        display: flex;
-        width: 70%;
-        max-width: 300px;
-        height: 200px;
-        margin: 0px auto;   
-        transition: all 0.3s ease 0s;
-    }
-
-    .container-portifolio .container-projetos {
-        width: 95%;
-        margin: 20px auto 0;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 0px;
-    }
-
 }
