--- a/src/style/home.css
+++ b/src/style/home.css
@@ -125,6 +125,27 @@ body {
     text-decoration: none;
 }
 
+@media (min-width: 1920px) {
+    .home {
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        height: 92vh;
+    }
+
+    .home .main {
+        width: 30%;
+        margin: 0px 0px 0px 240px;
+        text-align: center;
+    }
+    .home section {
+        width: 37%;
+        display: flex;
+        margin: 0px;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 @media (max-width: 1118px){
     .home {
         display: flex;
